--- a/public/style.css
+++ b/public/style.css
@@ -213,6 +213,16 @@ header ul li a:hover{
   margin: 15px;
 }
 */
+
+.menu-toggle {
+    color: #F8F8F8;
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+
 /* start image banner */
 .banner{
 	background: url(bgbanner/banner.png);
@@ -794,6 +804,37 @@ ul{
 
 /* leptop small */
 @media only screen and (min-width: 1024px) and (max-width: 1024px){
+	 header {
+        padding: 0 20px;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    header nav {
+        position: absolute;
+        width: 100%;
+        height: calc(100vh - 50px);
+        background: #F0F7FF;
+        top: 55px;
+        left: 100%;
+        transition: 0.5s all;
+        z-index: 1;
+    }
+
+    header nav.active {
+        left: 0;
+    }
+
+    header nav ul {
+        display: block;
+        text-align: center;
+    }
+    header nav ul li a {
+        border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+        color: #353535;
+    }
 	/* media service */
 	.pict img{
 	width: 300px;
