--- a/public/style2.css
+++ b/public/style2.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+/*body {
+    margin: 0;
+    padding: 0;
+    background: url(image/.jpg);
+    font-family: sans-serif;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+}*/
+
 header {
     position: absolute;
     background: #D1A506;
@@ -9,129 +20,141 @@ header {
     padding: 0 30px;
     width: 100%;
     box-sizing: border-box;
-  }
-  
-  header .logo {
+}
+
+header .logo {
     color: #ffffff;
-    height: 60px;
-    line-height: 60px;
+    line-height: 55px;
     font-size: 24px;
     float: left;
-    font-family: 'Inknut Antiqua';
     font-weight: bold;
-  }
+    font-family: 'Inknut Antiqua';
+}
 
-  span.in{
+span.in{
     color: #FBFF31;
   }
-  
-  header nav {
+
+header nav {
     float: right;
-  }
-  
-  header nav ul {
+}
+
+header nav ul {
     margin: 0;
     padding: 0;
     display: flex;
-  }
-  
-  header nav ul li {
-    list-style: none;
-  }
-  
-header nav ul li a:hover{
-  color: yellow;
 }
 
-  header nav ul li a {
+header nav ul li {
+    list-style: none;
+}
+
+header nav ul li a {
     color: #ffffff;
     height: 60px;
     line-height: 60px;
-    padding: 0 20px;
+    padding: 0 15px;
     text-decoration: none;
     display: block;
     font-family: 'Inter';
-  }
-  
-  header nav ul li a:hover
-  header nav ul li a.active {
-    color: black;
-  }
-  
-  /* responsive */
-  
-  @media (max-width: 500px) {
+}
+
+header nav ul li a:hover,
+header nav ul li a.active {
+    color: yellow;
+}
+
+.menu-toggle {
+    color: #F8F8F8;
+    float: right;
+    line-height: 50px;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+
+/* responsive */
+
+@media (max-width: 910px) {
     header {
         padding: 0 20px;
     }
-  
+
     .menu-toggle {
         display: block;
     }
-  
+
     header nav {
         position: absolute;
         width: 100%;
         height: calc(100vh - 50px);
-        background: #333;
-        top: 50px;
-        left: -100%;
+        background: #F0F7FF;
+        top: 55px;
+        left: 100%;
         transition: 0.5s all;
+        z-index: 1;
     }
-  
+
     header nav.active {
         left: 0;
     }
-  
+
     header nav ul {
         display: block;
         text-align: center;
     }
     header nav ul li a {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-        color: rgb(255, 255, 255);
+        border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+        color: #353535;
     }
-  }
+}
 
 body{
-	background-repeat: no-repeat;
-	background-image: linear-gradient(
-		to bottom,
-		#F2C46C 0%,
-		#F2C46C 50%,
-		#FFFFFF 50%,
-		#FFFFFF 100%
-	);
-	height: 100vh;
+/*  width: 100%;
+  height: 100vh;
+  background: url("image/cash.png");
+  background-size: cover;
+  position: relative;*/
+  background-repeat: no-repeat;
+  background-image: linear-gradient(
+    to bottom,
+    #F2C46C 0%,
+    #F2C46C 55%,
+    #FFFFFF 55%,
+    #FFFFFF 100%
+  );
+  height: 100vh;
     margin: 30px 0 0;
     justify-content: center;
     align-items: center;
 }
-.container{
-	width: 65%;
-	margin: 0px auto;
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: 100px; 
+.container {
+  padding-top: 30px;
+  width: 64%;
+  margin: 0px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 100px; 
 }
-.back{
-	height: 30px;
-	width: 30px;
+.dropdown {
+    font-family: 'Poppins';
+    top: 10px;
+    color: #ffffff;
+}
+.dropdown span {
+    color: #ffffff;
+}
+.text{
+  color: #ffffff;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
   padding-top: 50px;
-  margin-left: 30px;
 }
-.dropdown{
-	height: 30px;
-	width: 20px;
-	padding-top: 50px;
-  margin-right: 30px;
-  float: right;
-}
-.card{
-	border-radius: 15px;
-	height: 400px;
-	background-color: #ffff;
-	box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+.card {
+  border-radius: 15px;
+  height: 380px;
+  background-color: #ffff;
+  box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
 }
 .head-card {
     padding: 20px;
@@ -143,32 +166,107 @@ body{
     height: 200px;
     object-fit: cover;
 }
-.content{
-	font-size: 25px;
-	padding: 20px 10px;
-	text-align: center;
-	padding-top: 0px;
-	font-family: 'Poppins', sans-serif;
+.content {
+  font-size: 25px;
+  padding: 20px 10px;
+  text-align: center;
+  padding-top: 0px;
+  font-family: 'Poppins', sans-serif;
 }
 .content h2 {
     margin: 0;
     text-align: center;
-    font-size: 40px;
+    font-size: 35px;
     padding-bottom: 7px;
 }
-.content a{
-	text-decoration: none;
-	font-size: 20px;
-	color: #ffff;
-	letter-spacing: 1.5px;
-	display: inline-block; 
-	background-color: #F2C46C;
-	padding: 8px 25px;
-	border-radius: 20px;
-	font-family: 'Poppins', sans-serif;
+.content a {
+  text-decoration: none;
+  font-size: 20px;
+  color: #ffff;
+  letter-spacing: 1.5px;
+  display: inline-block; 
+  background-color: #F2C46C;
+  padding: 5px 25px;
+  border-radius: 20px;
+  font-family: 'Poppins', sans-serif;
 }
-.content a:hover{
-	background-color: #D1A506;
-	color: #000000;
-	transition: 0.5s ease;
+.content a:hover {
+  background-color: #D1A506;
+  color: #000000;
+  transition: 0.5s ease;
+}
+
+@media screen and (min-width: 320px) and (max-width: 430px) {
+    body{
+        background-repeat: repeat;
+        background-image: linear-gradient(
+            to bottom,
+            #F2C46C 0%,
+            #F2C46C 100%,
+            #FFFFFF 100%,
+            #FFFFFF 100%
+    );
+    }
+    .container {
+        width: 85%;
+        grid-gap: 50px;
+    }
+    .dropdown {
+        display: none;
+    }
+    .card {
+        height: 340px;
+    }
+    .head-card {
+        padding-top: 5px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 769px) {
+    body {
+        background-repeat: no-repeat;
+        background-image: linear-gradient(
+            to bottom,
+            #F2C46C 0%,
+            #F2C46C 60%,
+            #FFFFFF 60%,
+            #FFFFFF 100%
+    );
+    }
+    .container {
+        width: 80%;
+        grid-gap: 60px;
+    }
+    .card {
+        height: 300px;
+    }
+    .head-card {
+        padding-top: 15px;
+    }
+    .head-card img {
+      width: 95%;
+      height: 160px;
+    }
+    .dropdown {
+        display: none;
+    }
+    header nav {
+        position: absolute;
+        width: 50%;
+        height: calc(100vh - 50px);
+        background: #F0F7FF;
+        top: 55px;
+        right: 100%;
+        transition: 0.5s all;
+        z-index: 1;
+    }
+    .content h2 {
+      text-align: center;
+      font-size: 30px;
+      padding-bottom: 0px;
+    }
+    .content a {
+      font-size: 15px;
+      padding: 5px 25px;
+    }
 }
